--- a/src/res.qrc
+++ b/src/res.qrc
@@ -2,6 +2,7 @@
     <qresource prefix="/">
         <file>assets/bg.png</file>
         <file>assets/favicon.png</file>
+        <file>assets/icon_add.svg</file>
         <file>assets/icon_back.svg</file>
         <file>assets/icon_play.svg</file>
         <file>assets/icon_edit.svg</file>
