find a new font that supports čžšđć

--- a/src/res.qrc
+++ b/src/res.qrc
@@ -9,7 +9,7 @@
         <file>assets/icon_edit.svg</file>
         <file>assets/icon_play.svg</file>
         <file>assets/Lato-Regular.ttf</file>
-        <file>assets/PatuaOne-Regular.ttf</file>
+        <file>assets/Merriweather-Black.ttf</file>
         <file>init.sql</file>
         <file>qml/Style.qml</file>
         <file>qml/qmldir</file>
